--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <ul class="nav flex-column ms-5">
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img
+                      <a class="nav-link" href="https://github.com/YoutLone/Portfolio-Bootstrap" target="_blank" rel="noopener noreferrer"><img
                         class="headline-link-img"
                         src="images/github.svg"
                         alt="GitHub Link"
