Add two Linkedin links

--- a/index.html
+++ b/index.html
@@ -56,12 +56,20 @@
                     /></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img
+                      <a class="nav-link" href="https://linkedin.com/in/than-myo-htet-618b2524b" target="_blank" rel="noopener noreferrer"><img
                         class="headline-link-img"
                         src="images/linkedin.svg"
                         alt="Linkedin Link"
                     /></a>
                     </li>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="https://www.linkedin.com/in/mohammed-jamal-949366221/" target="_blank" rel="noopener noreferrer"><img
+                      class="headline-link-img"
+                      src="images/linkedin.svg"
+                      alt="Linkedin Link"
+                  /></a>
+                  </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#"><img
                         class="headline-link-img"
