Add twitter link

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   /></a>
                   </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><img
+                      <a class="nav-link" href="https://twitter.com/Mohamme43086002" target="_blank" rel="noopener noreferrer"><img
                         class="headline-link-img"
                         src="images/twitter.svg"
                         alt="Twitter Link"
